fixed image on mobile device

--- a/src/styles.css
+++ b/src/styles.css
@@ -101,6 +101,7 @@ a {
 
 @media (max-width: 900px) {
     .hero {
+        background-position: center;
         padding: 90px;
     }  
     .hero h1 {
